<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/departureDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departureDestination"
            android:textSize="15dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/departureTime"
            android:text="@string/departureTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/departurePlatform"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/departurePlatform"
            android:textStyle="bold"
            android:textSize="15dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/arrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrow"
            android:textSize="15dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/travelTime"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/travelTime"
            android:textStyle="bold"
            android:textSize="15dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/arrivalDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrivalDestination"
            android:textSize="15dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/arrivalTime"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/arrivalTime"
            android:textStyle="bold"
            android:textSize="15dp"></TextView>

        <TextView
            android:id="@+id/arrivalPlatform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrivalPlatform"
            android:textSize="15dp"
            android:textStyle="bold"></TextView>
    </LinearLayout>
</LinearLayout>