<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="90dp"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toStartOf="@+id/weatherButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDate"></Button>

    <EditText
        android:id="@+id/textForm"
        android:layout_width="363dp"
        android:layout_height="60dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <EditText
        android:id="@+id/textTo"
        android:layout_width="365dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/to"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textForm"></EditText>

    <TextView
        android:id="@+id/textTime"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:text="@string/time"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTo"></TextView>

    <TextView
        android:id="@+id/textDate"
        android:layout_width="268dp"
        android:layout_height="39dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:text="@string/date"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintEnd_toStartOf="@+id/weatherButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTime"></TextView>

    <ListView
        android:id="@+id/listView"
        android:layout_width="351dp"
        android:layout_height="314dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_button"></ListView>

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="70dp"
        android:text="@string/weather"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_button"
        app:layout_constraintTop_toBottomOf="@+id/textDate" />


</androidx.constraintlayout.widget.ConstraintLayout>